MODLD-568: Fix sonar violations (Part 1) (#16)
* MODLD-568: Fix sonar violation in tests

* MODLD-568: Change Bean names to use camel case

* MODLD-568: Add @SuppressWarnings('java:S6813') to mapstruct mappers